# Qwen3-TTS-Demo

./: .dockerignore  .env.docker.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  styleguide.md
.venv-mmaudio/: pyvenv.cfg
Qwen3-TTS/: pyproject.toml
Qwen3-TTS/examples/: test_model_12hz_custom_clone_instruct.py
Qwen3-TTS/finetuning/: README.md  dataset.py  prepare_data.py  sft_12hz.py  sft_custom_voice_12hz.py  sft_custom_voice_12hz_legacy.py
Qwen3-TTS/fusion/: upload_voicebox_to_hub.py
Qwen3-TTS/inference/: hybrid_clone_instruct.py
app/backend/: .env.example  requirements.txt
app/frontend/: index.html  next.config.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: plan.md
docs/cookbook/: 00-index.md  01-install-and-run.md  02-backend-guide.md  (+32 more)
qwen_extensions/: README.md
scripts/: bootstrap_all.sh  compare_base_checkpoints.py  compare_customvoice_checkpoints.py  download_models.ps1  download_models.sh  evaluate_customvoice_voicebox_quality.py  evaluate_instruct_following.py  evaluate_mai_ko_ft_quality.py  import_mai_ko_dataset.py  inspect_applio_downloads.py  install_cosyvoice_runtime.py  install_fish_speech_runtime.py  install_mmaudio_runtime.py  install_omnivoice_runtime.py  install_voxcpm_runtime.py  live_e2e_verify.py  live_external_training_smoke.py  live_training_step_smoke.py  make_voicebox_checkpoint.py  prepare_private_hf_assets.py  process_utils.py  qwen3_tts_customvoice_train.py  qwen3_tts_prepare_data.py  qwen3_tts_upstream_train.py  qwen3_tts_voicebox_bootstrap.py  qwen3_tts_voicebox_retrain.py  qwen3_tts_voicebox_train.py  run_ace_step_generate.py  run_cosyvoice_generate.py  run_cosyvoice_train.py  run_omnivoice_batch.py  run_omnivoice_generate.py  run_omnivoice_prepare.py  run_omnivoice_train.py  run_vibevoice_asr.py  run_vibevoice_tts_15b.py  run_voxcpm_generate.py  run_voxcpm_train.py  serve_s2_pro.sh  setup_backend.ps1  (+8 more)
test/: README.md  customvoice_clone_from_scratch.py  customvoice_clone_probe.py
voicebox/: README.md  bootstrap.py  clone.py  clone_instruct.py  clone_low_level.py  infer_instruct.py  make_checkpoint.py  retrain.py  runtime.py  sft_plain_custom_voice_12hz.py  sft_voicebox_12hz.py  sft_voicebox_bootstrap_12hz.py  train_customvoice.py  training_common.py  upload_to_hub.py
voicestudio/: Voicestudio.html  app.jsx  canvas-extra.jsx  canvas.jsx  chrome.jsx  inspector.jsx  sidebar.jsx  studio.css
workthrough/: 2026-05-13_16_20_vendor-ui-dataset-runtime.md  2026-05-13_17_31_vendor_ui_runtime_cleanup.md  2026-05-13_17_52_voice_library_gallery_cleanup.md  2026-05-13_18_09_model_tab_ux_split.md  2026-05-13_18_24_model_assets_ui_cleanup.md  2026-05-14_10_09_vibevoice_7b_and_tts_layout.md  2026-05-14_10_14_cosyvoice_layout_cleanup.md  2026-05-14_13_12_voxcpm_omnivoice_layout_language_cleanup.md  2026-05-14_13_34_ui_checkbox_cleanup.md  2026-05-14_14_44_ui_feedback_loop_cleanup.md  2026-05-14_16_20_voice_library_model_equal_tabs.md  2026-05-14_17_36_voice_library_remove_trained_bucket.md  2026-05-14_17_47_gallery_model_equal_filters.md  2026-05-14_17_54_voice_library_asset_sections.md  2026-05-14_18_04_gallery_preset_grouping.md  2026-05-14_18_14_remove_developer_ui_copy.md  2026-05-14_18_29_cosyvoice_advanced_options.md  2026-05-14_18_36_cosyvoice_reference_picker_dedupe.md  2026-05-14_18_45_remove_training_pipeline_copy.md  2026-05-14_18_58_voxcpm_advanced_lora_device.md  2026-05-14_19_08_voxcpm_design_clone_ui.md  2026-05-14_19_09_remove_developer_copy.md  2026-05-14_19_20_expression_tag_pickers.md  2026-05-18_17_29_supertonic_style_ui_cleanup.md  2026-05-18_17_39_model_availability_audit.md
(+259 files in other folders)
