[project]
name = "qwen3-tts-demo"
version = "0.1.0"
description = "Local FastAPI demo application for Qwen3-TTS workflows."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "certifi>=2026.2.25",
  "audio-separator>=0.44.1,<0.45.0",
  "beautifulsoup4>=4.14.0,<5.0.0",
  "faiss-cpu>=1.13.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "gradio>=5.50.0,<6.0.0",
  "hf-transfer>=0.1.9",
  "matplotlib>=3.10.0,<4.0.0",
  "pip>=24.0",
  "pydantic>=2.11.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "msgpack>=1.1.0,<2.0.0",
  "noisereduce>=3.0.0,<4.0.0",
  "pedalboard>=0.9.22,<1.0.0",
  "qwen-asr>=0.0.6,<0.1.0",
  "qwen-tts",
  "requests>=2.32.0,<3.0.0",
  "setuptools>=81.0.0",
  "soundfile>=0.13.0,<1.0.0",
  "torchcrepe>=0.0.24,<0.1.0",
  "torchfcpe>=0.0.4,<0.1.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "wget>=3.2,<4.0.0",
  "wheel>=0.46.0",
]

[tool.uv]
package = false

[tool.uv.sources]
qwen-tts = { path = "vendor/Qwen3-TTS", editable = true }
