[project]
name = "qwen3-tts-demo"
version = "0.1.0"
description = "Local FastAPI demo application for Qwen3-TTS workflows."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "certifi>=2026.2.25",
  "accelerate>=1.12.0",
  "audio-separator>=0.44.1,<0.45.0",
  "beautifulsoup4>=4.14.0,<5.0.0",
  "faiss-cpu>=1.13.0,<2.0.0",
  "fastapi>=0.116.0,<1.0.0",
  "gradio>=5.50.0,<6.0.0",
  "cachetools>=5.0.0",
  "datasets==3.5.0",
  "einx[torch]==0.2.2",
  "colorlog>=6.0.0",
  "diffusers>=0.37.0",
  "flash-attn @ https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/download/v0.9.4/flash_attn-2.8.3%2Bcu130torch2.11-cp311-cp311-linux_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "hf-transfer>=0.1.9",
  "hydra-colorlog>=1.2.0",
  "hydra-core>=1.3.2",
  "kui>=1.6.0",
  "lightning>=2.1.0",
  "loguru>=0.6.0",
  "loralib>=0.1.2",
  "matplotlib>=3.10.0,<4.0.0",
  "mmaudio",
  "pip>=24.0",
  "pydantic>=2.11.0,<3.0.0",
  "pyrootutils>=1.0.4",
  "python-multipart>=0.0.20,<1.0.0",
  "msgpack>=1.1.0,<2.0.0",
  "natsort>=8.4.0",
  "nitrous-ema>=0.0.1",
  "noisereduce>=3.0.0,<4.0.0",
  "numpy>=1.26.0,<2.1.0",
  "opencc-python-reimplemented==0.1.7",
  "open-clip-torch>=2.29.0",
  "opencv-python>=4.8.0",
  "ormsgpack>=1.7.0",
  "pedalboard>=0.9.22,<1.0.0",
  "peft>=0.18.0",
  "qwen-asr>=0.0.6,<0.1.0",
  "qwen-tts",
  "resampy>=0.4.3",
  "requests>=2.32.0,<3.0.0",
  "setuptools>=81.0.0",
  "silero-vad>=6.0.0",
  "soundfile>=0.13.0,<1.0.0",
  "tensorboard>=2.20.0",
  "tensordict>=0.6.1",
  "tiktoken>=0.8.0",
  "timm>=1.0.12",
  "torchcodec>=0.9.1",
  "torchdiffeq>=0.2.5",
  "torchcrepe>=0.0.24,<0.1.0",
  "torchfcpe>=0.0.4,<0.1.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "wandb>=0.19.0",
  "wget>=3.2,<4.0.0",
  "wheel>=0.46.0",
  "zstandard>=0.22.0",
]

[tool.uv]
package = false

[tool.uv.sources]
qwen-tts = { path = "vendor/Qwen3-TTS", editable = true }
mmaudio = { path = "vendor/MMAudio", editable = true }
